--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: lalistaderegalos_production
+  database: '<%= ENV["DATABASE_NAME"] %>'
   pool: 5
   timeout: 5000
   username: deploy
